cmd/k8s/k8score/static/manifests/deployment-backoffice-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice-ui
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backoffice-ui
  template:
    metadata:
      labels:
        app: backoffice-ui
    spec:
      containers:
        - name: backoffice-ui
          image: ${BACKOFFICE_UI_IMAGE}
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
