cmd/k8s/k8score/static/manifests/deployment-converter-routine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-routine
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: converter-routine
  template:
    metadata:
      labels:
        app: converter-routine
    spec:
      containers:
        - name: converter-routine
          image: ${CONVERTER_ROUTINE_IMAGE}
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: converter-plugins
              mountPath: /opt/converter/plugins
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - wget -q -O - http://localhost:8080/api/converter-routine/v1/actuator/health | grep -i 'healthy'
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - wget -q -O - http://localhost:8080/api/converter-routine/v1/actuator/health | grep -i 'healthy'
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: converter-plugins
          persistentVolumeClaim:
            claimName: converter-plugins
