cmd/k8s/k8score/static/manifests/deployment-converter-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: converter-service
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: converter-service
  template:
    metadata:
      labels:
        app: converter-service
    spec:
      containers:
        - name: converter-service
          image: ${CONVERTER_SERVICE_IMAGE}
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: converter-plugins
              mountPath: /opt/converter/plugins
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - wget --quiet --tries=1 -O - http://localhost:8080/api/converter-service/v1/actuator/health \
                  | grep -i 'healthy' || exit 1
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - wget --quiet --tries=1 -O - http://localhost:8080/api/converter-service/v1/actuator/health \
                  | grep -i 'healthy' || exit 1
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: converter-plugins
          persistentVolumeClaim:
            claimName: converter-plugins
