cmd/k8s/k8score/static/manifests/deployment-dataportal.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataportal
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataportal
  template:
    metadata:
      labels:
        app: dataportal
    spec:
      containers:
        - name: dataportal
          image: ${DATAPORTAL_IMAGE}
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
