cmd/k8s/k8score/static/manifests/deployment-ingestor-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingestor-service
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestor-service
  template:
    metadata:
      labels:
        app: ingestor-service
    spec:
      containers:
        - name: ingestor-service
          image: ${INGESTOR_SERVICE_IMAGE}
          ports:
            - containerPort: 8080
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - curl --fail --silent http://localhost:8080/api/ingestor-service/v1/actuator/health | grep UP || exit 1
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - curl --fail --silent http://localhost:8080/api/ingestor-service/v1/actuator/health | grep UP || exit 1
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5
