cmd/k8s/k8score/static/manifests/deployment-metadata-database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metadata-database
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metadata-database
  template:
    metadata:
      labels:
        app: metadata-database
    spec:
      containers:
        - name: metadata-database
          image: ${METADATA_DATABASE_IMAGE}
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: psqldata
              mountPath: /var/lib/postgresql
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - metadatauser
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - metadatauser
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
      volumes:
        - name: psqldata
          persistentVolumeClaim:
            claimName: psqldata
