cmd/k8s/k8score/static/manifests/deployment-resources-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resources-service
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resources-service
  template:
    metadata:
      labels:
        app: resources-service
    spec:
      containers:
        - name: resources-service
          image: ${RESOURCES_SERVICE_IMAGE}
          ports:
            - containerPort: 8080
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - curl --fail --silent http://localhost:8080/api/resources-service/v1/actuator/health | grep UP || exit 1
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - curl --fail --silent http://localhost:8080/api/resources-service/v1/actuator/health | grep UP || exit 1
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
