cmd/k8s/k8score/static/manifests/service-backoffice-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice-ui
  namespace: ${NAMESPACE}
spec:
  selector:
    app: backoffice-ui
  ports:
    - name: backoffice-ui
      port: 80
