cmd/k8s/k8score/static/manifests/service-converter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: converter-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: converter-service
  ports:
    - name: converter-service
      port: 8080
      targetPort: 8080
