cmd/k8s/k8score/static/manifests/service-dataportal.yaml
apiVersion: v1
kind: Service
metadata:
  name: dataportal
  namespace: ${NAMESPACE}
spec:
  selector:
    app: dataportal
  ports:
    - name: dataportal
      port: 80
