cmd/k8s/k8score/static/manifests/service-email-sender-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-sender-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: email-sender-service
  ports:
    - name: email-sender-service
      port: 8080
      targetPort: 8080
