cmd/k8s/k8score/static/manifests/service-external-access-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-access-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: external-access-service
  ports:
    - name: external-access-service
      port: 8080
      targetPort: 8080
