cmd/k8s/k8score/static/manifests/service-ingestor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingestor-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: ingestor-service
  ports:
    - name: ingestor-service
      port: 8080
      targetPort: 8080
