cmd/k8s/k8score/static/manifests/service-metadata-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: metadata-database
  namespace: ${NAMESPACE}
spec:
  selector:
    app: metadata-database
  ports:
    - name: metadata-database
      port: 5432
      targetPort: 5432
