cmd/k8s/k8score/static/manifests/service-sharing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sharing-service
  namespace: ${NAMESPACE}
spec:
  selector:
    app: sharing-service
  ports:
    - name: sharing-service
      port: 8080
      targetPort: 8080
